--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 POSTGRES_HOST=127.0.0.1
 POSTGRES_DB=storefront
+POSTGRES_TEST_DB=storefront
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=12345
+ENV=test
