--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "test": "npm run build && npm run jasmine"
+    "migrate": "db-migrate --env test up && db-migrate up",
+    "test": "ENV=test db-migrate --env test up && jasmine && db-migrate db:drop test"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "eslint-config-prettier": "^9.1.0",
     "jasmine": "^5.1.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4",
