--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "migrate": "db-migrate --env test up && db-migrate up",
-    "test": "ENV=test db-migrate --env test up && jasmine && db-migrate db:drop test"
+    "test": "npm run build && ENV=test db-migrate --env test up && jasmine && db-migrate db:drop test"
   },
   "author": "",
   "license": "ISC",
