--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
     "express": "^4.18.2",
