--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "migrate": "db-migrate --env test up && db-migrate up",
+    "migrate": "db-migrate --env dev up && db-migrate up",
     "test": "ENV=test && npm run build &&  db-migrate up -e test && jasmine && db-migrate reset -e test"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jasmine": "^5.1.4",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.19",
     "@types/pg": "^8.11.4",
     "@types/supertest": "^6.0.2",
@@ -37,10 +39,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "sharp": "^0.33.2"
   }
