--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ POSTGRES_DB=storefront
 POSTGRES_TEST_DB=storefront_test
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=12345
-ENV=dev
+ENV=test
 BCRYPT_PASSWORD=snack-snack
 SALT_ROUNDS=10
 TOKEN_SECRET=aloalo123
